# mutation_impact

./: 1crn_test.fasta  PIPELINE_OVERVIEW.txt  QUICK_MULTI_PDB_TESTS.md  README.md  hj.md  pyproject.toml  requirements.txt
data/: training_dataset.csv
docs/: ACCURACY_REPORT.md  CORRECTED_SAMPLE_INPUTS.md  DELETERIOUS_MUTATION_RESULTS.md  HIGH_ACCURACY_WEB_PIPELINE.md  ML_ONLY_PIPELINE_SUCCESS.md  MULTI_PDB_TEST_CASES.md  SAMPLE_INPUTS_AND_EXPECTED_OUTPUTS.md  SETUP_WINDOWS.md  SIMPLE_PDF_EXPORT.md  WEB_INTERFACE_FIXES.md  check_1crn_sequence.py  check_structure_mutations.py  create_better_ml_model.py  debug_classifier_difference.py  debug_exact_prediction.py  debug_ml_features.py  debug_ml_loading.py  debug_model_loading.py  debug_visualization.py  debug_visualization_report.html  fix_alignment_issue.py  fix_k8e_prediction.py  fix_sequence_mutation.py  get_pdb_sequences.py  report_3d.html  report_af.html  report_af2.html  report_new_af.html  report_pdb.html  report_pdb2.html  report_sample_min.html  report_seq_MVLKPADKTNVKAAWQK_K4E.html  report_user.html  report_user1.html  test11.py  test_comprehensive_accuracy.py  test_corrected_deleterious.py  test_deleterious_mutation.py  test_fixed_mutation.py  test_ml_accuracy.py  (+14 more)
models/: ensemble_metadata.json  ensemble_model.joblib  extra_trees_model.joblib  gradient_boosting_model.joblib  high_accuracy_metadata.json  lightgbm_model.joblib  logistic_regression_model.joblib  neural_network_model.joblib  random_forest_metadata.json  random_forest_model.joblib  svm_model.joblib  xgboost_model.joblib
mutation_impact/: __init__.py  (+2 more)
(+31 files in other folders)
